Check if PlainColor palette JSON is correctly typed so it cannot break the app

--- a/src/components/ColorInput/index.scss
+++ b/src/components/ColorInput/index.scss
@@ -10,5 +10,6 @@
     border-radius: 0.375rem;
     background: var(--color_element);
     cursor: text;
+    text-transform: uppercase;
   }
 }
